[*] небольшой рефакторинг